--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,5 @@ RoxygenNote: 7.1.1
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/AlienorStahl/netwerk
+BugReports: https://github.com/AlienorStahl/netwerk/issues
